# Agent-test-5

./: .gitignore  README.md  proxy_filter.py  pyproject.toml  run_all.sh  run_bwrap.sh  run_cline_sandbox.sh  sandbox_config.yaml  seccomp_helper.py  setup.sh  test_agent.py  test_bwrap_agent.py
cline_sandbox/: README.md  __init__.py  __main__.py  app.py  config.py  models.py  sandbox.py  session_manager.py
cline_sandbox/static/: index.html
cline_sandbox/tests/: conftest.py  test_api.py  test_regression.py  test_review_round2.py  test_sandbox.py  test_session_manager.py
demos/: bwrap_basic.sh  bwrap_network.sh  bwrap_seccomp.sh  level_0.sh  level_1.sh  level_2.sh  level_3.sh  level_4.sh  level_5.sh
proxy_setup/: README.md  example_agent.py  llm_proxy.py  run_agent.sh  run_proxy.sh
tutorials/: 01_landlock_basics.py  02_network_namespaces.py  03_seccomp_bpf.py  04_combining_layers.py  05_sandbox_your_agent.py
