[project]
name = "agent-sandbox"
version = "0.1.0"
description = "AI Agent Kernel Security Sandbox Demo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "landlock>=1.0.0.dev5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = []
