[project]
name = "agent-sandbox"
version = "0.1.0"
description = "AI Agent Kernel Security Sandbox Demo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "landlock>=1.0.0.dev5",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cline_sandbox"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "anyio>=4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["cline_sandbox/tests"]
